--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "client": "node src/client/pvmsClient.js",
     "server": "node src/server/pvmsServer.js",
+    
+    "testdb": "nodemon src/server/database/db.test.js",
     "watch": "nodemon src/client/pvmsClient.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,7 +24,8 @@
   "dependencies": {
     "axios": "^1.2.1",
     "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
