--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "client": "node src/client/pvmsClient.js",
-    "server": "node src/server/pvmsServer.js",
-    
-    "testdb": "nodemon src/server/database/db.test.js",
-    "watch": "nodemon src/client/pvmsClient.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "node src/client/client.js",
+    "server": "node src/server/server.js",
+
+    "watchClient": "nodemon src/client/client.js",
+    "watchServer": "nodemon src/server/server.js",
+
+    "testdb": "nodemon src/server/database/db.test.js"
   },
   "repository": {
     "type": "git",
