--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "client": "node src/client/client.js",
     "server": "node src/server/server.js",
+    "server-reset": "node src/server/server.js -r true -a 50",
     "watchClient": "nodemon src/client/client.js",
     "watchServer": "nodemon src/server/server.js",
     "testClient": "nodemon src/client/client-sample.js"
@@ -23,6 +24,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "cheerio": "^1.0.0-rc.12",
+    "commander": "^9.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
