modify socket algorithim

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/techaploog/pvms-project.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Chaikrit Techaploog",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/techaploog/pvms-project/issues"
